# bugwithbags

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: logger.rs  main.rs
backend/src/routes/: index.rs  mod.rs  stations.rs
frontend/: Dockerfile  package.json
frontend/src/: App.svelte  StationCard.svelte
parsers/: Cargo.toml  Dockerfile
parsers/src/: lib.rs  main.rs  mod.rs
parsers/src/yandex/: mod.rs  stations.rs
src/: logger.rs  main.rs
src/routes/: index.rs  stations.rs
