[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version="0.14", features = ["server"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
indicatif = "0.16"
log = "0.4"
mongodb = "2.8"