[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version="0.14", features = ["http1", "server", "tcp"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
log = "0.4.21"
mongodb = "2.8"
itertools = "0.13.0"